# LLM-ArXiv-Domain-Expert

./: .gitignore  Ollama_+_Unsloth_+_Llama_3_+_Alpaca.ipynb  README.md  pyproject.toml
code_snippets/: 01_torch.py  02_arxiv_etl.py  04_ovm.py  04_qdrant_snapshot.py  05_hf_dataset_upload.py  06_hf_dataset_snapshot.py  06_hf_dpo_dataset_snapshot.py  06_hf_dpo_snapshot.py  06_hf_instruct_snapshot.py
configs/: arxiv-ml-data-etl.yaml  expert_data_etl_ml.yaml  feature_engineering.yaml  generate_instruct_datasets.yaml  generate_preference_datasets.yaml  test_arxiv.yaml  training.yaml
data/data_warehouse_raw_data/: ExpertDocument.json  PaperDocument.json
llm_engineering/: settings.py  utils.py
llm_engineering/application/: crawler.py
llm_engineering/application/dataset/: generation.py  utils.py
llm_engineering/application/preprocessing/: __init__.py  chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py  preprocessing.py
llm_engineering/application/preprocessing/operations/: __init__.py  chunking.py  cleaning.py
llm_engineering/application/rag/: retriever.py
llm_engineering/domain/: chunks.py  cleaned_documents.py  documents.py  embedded_chunks.py  prompt.py  queries.py  types.py
llm_engineering/domain/base/: __init__.py  vector.py
llm_engineering/model/finetuning/: finetune.py  requirements.txt  sagemaker.py
pipelines/: __init__.py  arxiv_data_etl.py  end_to_end_data.py  feature_engineering.py  generate_datasets.py
steps/etl/: __init__.py  crawl_links.py  get_or_create_expert.py
steps/feature_engineering/: clean.py  query_data_warehouse.py  rag.py
steps/generate_datasets/: push_to_huggingface.py  query_feature_store.py
tools/: data_warehouse.py  run.py
